2006-07-03  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/GNOME_VFS_Daemon.idl:
	* libgnomevfs/Makefile.am:
	Remove old corba stuff

2006-07-03  Alexander Larsson  <alexl@redhat.com>

	* daemon/daemon-connection.c:
	Add DBUS-TODO
	
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-dbus-utils.c:
	* libgnomevfs/gnome-vfs-dbus-utils.h:
	* libgnomevfs/gnome-vfs-volume-monitor-client.c:
	Move functions to monitor-client.c
	Remove dbus-utils.c file.
	
	* libgnomevfs/gnome-vfs-cancellation-private.h:
	* libgnomevfs/gnome-vfs-cancellation.c:
	* libgnomevfs/gnome-vfs-daemon-method.c:
	Fix daemon cancellation.
	Tell "" and NULL appart on the wire.
	
	* libgnomevfs/gnome-vfs-drive.c:
	* libgnomevfs/gnome-vfs-volume.c:
	Tell "" and NULL appart on the wire.

2006-07-03  Alexander Larsson  <alexl@redhat.com>

	* daemon/dbus-utils.c:
	* libgnomevfs/gnome-vfs-dbus-utils.c:
	* libgnomevfs/gnome-vfs-dbus-utils.h:
	* libgnomevfs/gnome-vfs-drive.c:
	* libgnomevfs/gnome-vfs-volume-monitor-client.c:
	* libgnomevfs/gnome-vfs-volume-monitor-client.h:
	* libgnomevfs/gnome-vfs-volume-monitor-private.h:
	* libgnomevfs/gnome-vfs-volume-ops.c:
	* libgnomevfs/gnome-vfs-volume.c:
	* modules/default-modules.conf:
	Some volume manager dbus work.

2006-06-29  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-cancellation-private.h:
	* libgnomevfs/gnome-vfs-cancellation.c:
	* libgnomevfs/gnome-vfs-daemon-method.c:
	Use one private dbus connection per thread for the
	daemon method.

2006-06-26  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* daemon/.cvsignore:
	* daemon/Makefile.am:
	* daemon/daemon-connection.[ch]:
	* daemon/dbus-utils.[ch]:
	* daemon/gnome-vfs-daemon.service.in:
	* daemon/vfs-daemon.c:
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-cancellation-private.h:
	* libgnomevfs/gnome-vfs-cancellation.c:
	* libgnomevfs/gnome-vfs-client-call.[ch]:
	* libgnomevfs/gnome-vfs-client.[ch]:
	* libgnomevfs/gnome-vfs-daemon-method.[ch]: